force-app/main/default/objects/Account/fields/CICD2__c.field-meta.xml
<CustomField>
    <fullName>CICD2__c</fullName>
    <label>CICD2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>