force-app/main/default/objects/Account/fields/color_theme__c.field-meta.xml
<CustomField>
    <fullName>color_theme__c</fullName>
    <label>color theme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>