force-app/main/default/objects/Account/fields/owner2__c.field-meta.xml
<CustomField>
    <fullName>owner2__c</fullName>
    <label>owner2</label>
    <type>TextArea</type>
</CustomField>